--- a/finalProjectMeetVatsal/app/src/main/res/layout/activity_layout_products.xml
+++ b/finalProjectMeetVatsal/app/src/main/res/layout/activity_layout_products.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".recycler.layout_products">
+    tools:context=".recycler.Layout_Products">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
